--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -101,11 +101,11 @@ jobs:
           
     - name: Run occ command
       run: |
-        docker exec nextcloud php occ integrity:sign-app \
+        docker exec -t -u 33 nextcloud sh -c "php occ integrity:sign-app \
             --privateKey=/certificates/transfer.key \
             --certificate=/certificates/transfer.crt \
             --path=/var/www/html/nextcloud-transfer.tar.gz && \
-        ls -lah /var/www/html && ls -lah /var/www/html/config && ls -lah /var/www/.nextcloud/certificates && ls -lah /var/www/html/transfer && ls -lah /var/www/html/transfer/appinfo
+        ls -lah /var/www/html && ls -lah /var/www/html/config && ls -lah /var/www/.nextcloud/certificates && ls -lah /var/www/html/transfer && ls -lah /var/www/html/transfer/appinfo"
 
 
   release:
