--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -101,7 +101,7 @@ jobs:
           
     - name: Run occ command
       run: |
-        docker exec -t -u 33 nextcloud sh -c "php occ integrity:sign-app \
+        docker exec -t -u 33 nextcloud sh -c "php /usr/src/nextcloud/occ integrity:sign-app \
             --privateKey=/certificates/transfer.key \
             --certificate=/certificates/transfer.crt \
             --path=/var/www/html/nextcloud-transfer.tar.gz && \
