--- a/.config/docker-compose.yml
+++ b/.config/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   db:
     image: mariadb:10.11
     command: --transaction-isolation=READ-COMMITTED
+    container_name: db
     restart: always
     volumes:
       - db:/var/lib/mysql
@@ -24,11 +25,12 @@ services:
       - 127.0.0.1:8080:80
     volumes:
       - nextcloud:/var/www/html
-      - /certificates:/certificates
-      - /transfer-src/.config:/var/www/html/config
+      - ./certificates:/var/www/html/certificates
+      - ./transfer-src/.config:/var/www/html/config
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
       # NOTE: The `volumes` config of the `cron` and `app` containers must match
+    entrypoint: ["/bin/bash", "-c" , "chown -R 1001:118 /var/www/html/config && chmod -R 755 /var/www/html/config && chown -R 1001:118 /var/www/html/certificates && chmod -R 755 /var/www/html/certificates && /entrypoint.sh apache2-foreground "]
     environment:
       - UID=1001
       - GID=118
