--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -93,13 +93,16 @@ jobs:
       run: |
         docker-compose -f $(pwd)/transfer-src/.config/docker-compose.yml up -d
 
-    - name: Run occ command
-      run: |
-        docker exec -t -u 1001:118 nextcloud sh -c 'php /usr/src/nextcloud/occ config:list --output=json_pretty'
+    - name: Wait for 30 seconds
+      run: sleep 30
 
     - name: Run occ command
       run: |
-        docker exec -t -u 1001:118 nextcloud sh -c "php /usr/src/nextcloud/occ integrity:sign-app \
+        docker exec -t -u 1001:118 nextcloud sh -c 'php occ config:list --output=json_pretty'
+
+    - name: Run occ command
+      run: |
+        docker exec -t -u 1001:118 nextcloud sh -c "php occ integrity:sign-app \
             --privateKey=/certificates/transfer.key \
             --certificate=/certificates/transfer.crt \
             --path=/var/www/html/nextcloud-transfer.tar.gz && \
