--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -93,8 +93,16 @@ jobs:
       run: |
         docker-compose -f $(pwd)/transfer-src/.config/docker-compose.yml up -d
 
+    - name: Run occ command
+      run: |
+        ls -lah $(pwd) && ls -lah $(pwd)/config && ls -lah /certificates"
+
     - name: Wait for 30 seconds
       run: sleep 30
+
+    - name: Run occ command
+      run: |
+        ls -lah $(pwd) && ls -lah $(pwd)/config && ls -lah /certificates"
 
     - name: Run occ command
       run: |
