--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -102,7 +102,7 @@ jobs:
 
     - name: Run occ command
       run: |
-        ls -lah $(pwd) && ls -lah $(pwd)/config && ls -lah /certificates"
+        ls -lah $(pwd) && ls -lah $(pwd)/config && ls -lah /certificates
 
     - name: Run occ command
       run: |
