--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -95,14 +95,14 @@ jobs:
 
     - name: Run occ command
       run: |
-        ls -lah $(pwd) && ls -lah $(pwd)/config && ls -lah /certificates
+        ls -lah $(pwd) && ls -lah $(pwd)/.config && ls -lah /certificates
 
     - name: Wait for 30 seconds
       run: sleep 30
 
     - name: Run occ command
       run: |
-        ls -lah $(pwd) && ls -lah $(pwd)/config && ls -lah /certificates
+        ls -lah $(pwd) && ls -lah $(pwd)/.config && ls -lah /certificates
 
     - name: Run occ command
       run: |
