--- a/.config/docker-compose.yml
+++ b/.config/docker-compose.yml
@@ -26,12 +26,12 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - nextcloud:/var/www/html
-      - ./certificates:/var/www/html/certificates
+      - ./certificates:/certificates
       - ./transfer-src/.config:/var/www/html/config
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
       # NOTE: The `volumes` config of the `cron` and `app` containers must match
-    entrypoint: ["/bin/bash", "-c" , "chown -R 33:33 /var/www/html/config && chmod -R 755 /var/www/html/config && chown -R 33:33 /var/www/html/certificates && chmod -R 755 /var/www/html/certificates && /entrypoint.sh apache2-foreground "]
+    entrypoint: ["/bin/bash", "-c" , "chown -R 33:33 /var/www/html/config && chmod -R 755 /var/www/html/config && chown -R 33:33 /certificates && chmod -R 755 /certificates && /entrypoint.sh apache2-foreground "]
     environment:
       - UID=33
       - GID=33
