--- a/.config/docker-compose.yml
+++ b/.config/docker-compose.yml
@@ -26,8 +26,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - nextcloud:/var/www/html
-      - ./certificates:/certificates
-      - ./transfer-src/.config:/var/www/html/config
+      - ${PWD}/certificates:/certificates
+      - ${PWD}/transfer-src/.config:/var/www/html/config
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
       # NOTE: The `volumes` config of the `cron` and `app` containers must match
